# casting

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: pr.yml  test.yml
src/: lib.rs
